# docs/swagger.yaml
@@ -1,9 +1,25 @@
 definitions:
-  entity.SysUserServiceCreateReq:
+  entities.UserServiceCreateReq:
     properties:
       nickname:
         type: string
       password:
+        type: string
+      phone:
+        type: string
+      status:
+        type: integer
+    required:
+    - nickname
+    - password
+    - phone
+    - status
+    type: object
+  entities.UserServiceUpdateReq:
+    properties:
+      id:
+        type: integer
+      nickname:
         type: string
       phone:
         type: string
@@ -17,38 +33,10 @@ definitions:
       phone:
         type: string
     type: object
-  entity.SysUserServiceUpdateReq:
-    properties:
-      id:
-        type: integer
-      nickname:
-        type: string
-      phone:
-        type: string
-      status:
-        type: integer
-    type: object
 info:
   contact: {}
 paths:
   /user:
-    delete:
-      consumes:
-      - application/json
-      parameters:
-      - description: Authorization
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-      summary: 退出会话
-      tags:
-      - 用户操作
     post:
       consumes:
       - application/json
@@ -63,7 +51,7 @@ paths:
         name: userInfo
         required: true
         schema:
-          $ref: '#/definitions/entity.SysUserServiceCreateReq'
+          $ref: '#/definitions/entities.UserServiceCreateReq'
       responses:
         "200":
           description: OK
@@ -72,29 +60,10 @@ paths:
       summary: 创建一条用户记录
       tags:
       - 用户操作
-    put:
-      parameters:
-      - description: Authorization
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: 需要更新的用户信息
-        in: body
-        name: userInfo
-        required: true
-        schema:
-          $ref: '#/definitions/entity.SysUserServiceUpdateReq'
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-      summary: 更新用户信息
-      tags:
-      - 用户
   /user/{id}:
     get:
+      consumes:
+      - application/json
       parameters:
       - description: Authorization
         in: header
@@ -111,10 +80,36 @@ paths:
           description: OK
           schema:
             type: string
-      summary: 根据用户编号查找一条用户记录
+      summary: 查看用户记录
       tags:
       - 用户操作
-  /user/auth:
+    put:
+      parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 用户编号
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 需要更新的用户信息
+        in: body
+        name: userInfo
+        required: true
+        schema:
+          $ref: '#/definitions/entities.UserServiceUpdateReq'
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 更新用户信息
+      tags:
+      - 用户操作
+  /user/login:
     post:
       consumes:
       - application/json
@@ -131,6 +126,24 @@ paths:
           schema:
             type: string
       summary: 用户授权登录
+      tags:
+      - 用户操作
+  /user/logout:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 退出会话
       tags:
       - 用户操作
 swagger: "2.0"
